--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Attempt to create the odin project landing page
 let´s see if i can do it
+images from unsplash free:
+Hoover Tung city in black and blue
